--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -58,8 +58,8 @@ Features
 
      ranged_int = RangedInt()
 
-   Values that are expected to be callables can now alternately be methods of
-   the schemanode subclass instead of plain attributes::
+  Values that are expected to be callables can now alternately be methods of
+  the schemanode subclass instead of plain attributes::
 
      from colander import SchemaNode
 
@@ -73,22 +73,22 @@ Features
 
      ranged_int = RangedInt()
 
-   Note that when implementing a method value such as ``validator`` that
-   expects to receive a ``node`` argument, ``node`` must be provided in the
-   call signature, even though ``node`` will almost always be the same as
-   ``self``.  This is because Colander simply treats the method as another
-   kind of callable, be it a method, or a function, or an instance that has a
-   ``__call__`` method.  It doesn't care that it happens to be a method of
-   ``self``, and it needs to support callables that are not methods, so it
-   sends ``node`` in regardless.
+  Note that when implementing a method value such as ``validator`` that
+  expects to receive a ``node`` argument, ``node`` must be provided in the
+  call signature, even though ``node`` will almost always be the same as
+  ``self``.  This is because Colander simply treats the method as another
+  kind of callable, be it a method, or a function, or an instance that has a
+  ``__call__`` method.  It doesn't care that it happens to be a method of
+  ``self``, and it needs to support callables that are not methods, so it
+  sends ``node`` in regardless.
 
-   Normal inheritance rules apply to class attributes and methods defined in
-   a schemanode subclass.  If your schemanode subclass inherits from another
-   schemanode class, your schemanode subclass' methods and class attributes
-   will override the superclass' methods and class attributes.
+  Normal inheritance rules apply to class attributes and methods defined in a
+  schemanode subclass.  If your schemanode subclass inherits from another
+  schemanode class, your schemanode subclass' methods and class attributes
+  will override the superclass' methods and class attributes.
 
-   You can't currently use *method* definitions as ``colander.deferred``
-   callables.  For example this will *not* work::
+  You can't currently use *method* definitions as ``colander.deferred``
+  callables.  For example this will *not* work::
 
      from colander import SchemaNode
 
@@ -108,13 +108,13 @@ Features
      ranged_int = RangedInt()
      bound_ranged_int = ranged_int.bind(request=request)
 
-   This will result in::
+  This will result in::
 
         TypeError: avalidator() takes exactly 3 arguments (2 given)
 
-   However, if you treat the thing being decorated as a function instead of a
-   method (remove the ``self`` argument from the argument list), it will
-   indeed work)::
+  However, if you treat the thing being decorated as a function instead of a
+  method (remove the ``self`` argument from the argument list), it will
+  indeed work)::
 
      from colander import SchemaNode
 
@@ -134,11 +134,11 @@ Features
      ranged_int = RangedInt()
      bound_ranged_int = ranged_int.bind(request=request)
 
-   In previous releases of Colander, the only way to defer the computation of
-   values was via the ``colander.deferred`` decorator.  In this release,
-   however, you can instead use the ``bindings`` attribute of ``self`` to
-   obtain access to the bind parameters within values that are plain old
-   methods::
+  In previous releases of Colander, the only way to defer the computation of
+  values was via the ``colander.deferred`` decorator.  In this release,
+  however, you can instead use the ``bindings`` attribute of ``self`` to
+  obtain access to the bind parameters within values that are plain old
+  methods::
 
      from colander import SchemaNode
 
@@ -155,10 +155,10 @@ Features
      ranged_int = RangedInt()
      bound_range_int = ranged_int.bind(request=request)
 
-   If the things you're trying to defer aren't callables like ``validator``,
-   but they're instead just plain attributes like ``missing`` or ``default``,
-   instead of using a ``colander.deferred``, you can use ``after_bind`` to
-   set attributes of the schemanode that rely on binding variables::
+  If the things you're trying to defer aren't callables like ``validator``,
+  but they're instead just plain attributes like ``missing`` or ``default``,
+  instead of using a ``colander.deferred``, you can use ``after_bind`` to set
+  attributes of the schemanode that rely on binding variables::
 
      from colander import SchemaNode
 
@@ -168,8 +168,8 @@ Features
          def after_bind(self, node, kw):
              self.default = kw['request'].user.id
 
-   You can override the default values of a schemanode subclass in its
-   constructor::
+  You can override the default values of a schemanode subclass in its
+  constructor::
 
      from colander import SchemaNode
 
@@ -180,12 +180,12 @@ Features
 
      ranged_int = RangedInt(validator=colander.Range(0, 20))
 
-   In the above example, the validation will be done on 0-20, not 0-10.
+  In the above example, the validation will be done on 0-20, not 0-10.
 
-   If a schema node name conflicts with a schema value attribute name on the
-   same class, you can work around it by giving the schema node a bogus name
-   in the class definition but providing a correct ``name`` argument to the
-   schema node constructor::
+  If a schema node name conflicts with a schema value attribute name on the
+  same class, you can work around it by giving the schema node a bogus name
+  in the class definition but providing a correct ``name`` argument to the
+  schema node constructor::
 
      from colander import SchemaNode, Schema
 
