--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,8 @@ Features
 - Add Python 3.3 to tox configuration and use newer tox testing regime
   (setup.py dev).
 
+- Add Python 3.3 Trove classifier.
+
 - Calling ``bind`` on a schema node e.g. ``cloned_node = somenode.bind(a=1,
   b=2)`` on a schema node now results in the cloned node having a
   ``bindings`` attribute of the value ``{'a':1, 'b':2}``.
