--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,13 @@
+Unreleased
+------------------
+
+Bug Fixes
+~~~~~~~~~
+
+- Sync documentation with 0.9.9 change to use ``insert_before`` rather than
+  ``schema_order``.  See https://github.com/Pylons/colander/issues/104
+
+
 1.0a2 (2013-01-30)
 ------------------
 
