--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Next release
 ------------
 
-- ....
+- Loosen Email validator regex (permit apostrophes, bang, etc in localpart).
 
 1.0a3 (2013-05-16)
 ------------------
