--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,10 @@ Next release
 
 - Loosen Email validator regex (permit apostrophes, bang, etc in localpart).
 
+- Allow for timezone info objects to be pickled and unpickled "more correctly"
+  (Use '__getinitargs__' to provide unpickling-only defaults).  See
+  https://github.com/Pylons/colander/pull/108.
+
 1.0a3 (2013-05-16)
 ------------------
 
