--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+Next release
+------------
+
+- Fix bug introduced by supporting spec-mandated truncations of ISO-8601
+  timezones.  A TypeError would be raised instead of Invalid.  See
+  https://github.com/Pylons/colander/issues/111.
+
 1.0a4 (2013-05-21)
 ------------------
 
