--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -53,6 +53,9 @@ Features
 - The ``typ`` of a ``SchemaNode`` can optionally be pased in as a keyword
   argument. See https://github.com/Pylons/colander/issues/90
 
+- Add a ``missing_msg`` argument to ``SchemaNode`` that specifies the error
+  message to be used when the node is required and missing
+
 1.0a5 (2013-05-31)
 ------------------
 
