--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,10 @@ Bug Fixes
   ``ParseErrorr`` in ``parse_date``, so that the validation machinery
   upstream handles it properly.
 
+- ``colander.String`` schema type now raises ``colander.Invalid`` when trying
+  to deserialize a non-string item.
+  See https://github.com/Pylons/colander/issues/100
+
 Features
 ~~~~~~~~
 
