--- a/colander/locale/it/LC_MESSAGES/colander.po
+++ b/colander/locale/it/LC_MESSAGES/colander.po
@@ -11,11 +11,11 @@ msgstr ""
 "PO-Revision-Date: 2013-05-19 14:57+0100\n"
 "Last-Translator: Lorenzo M. Catucci <lorenzo@sancho.ccd.uniroma2.it>\n"
 "Language-Team: it <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
+"Generated-By: Babel 1.3\n"
 
 #: colander/__init__.py:233
 msgid "Invalid value"
@@ -71,7 +71,8 @@ msgstr "\"${val}\" non è iterabile"
 
 #: colander/__init__.py:664
 msgid ""
-"\"${val}\" has an incorrect number of elements (expected ${exp}, was ${was})"
+"\"${val}\" has an incorrect number of elements (expected ${exp}, was "
+"${was})"
 msgstr "\"${val}\" contiene ${was} elementi anziché gli attesi ${exp}"
 
 #: colander/__init__.py:803
@@ -96,14 +97,12 @@ msgstr "${val} non è una stringa"
 
 #: colander/__init__.py:1279
 msgid "\"${val}\" is neither in (${false_choices}) nor in (${true_choices})"
-msgstr ""
-"\"${val}\" non è contenuto né in ${false_choices} né in ${true_choices}"
+msgstr "\"${val}\" non è contenuto né in ${false_choices} né in ${true_choices}"
 
 #: colander/__init__.py:1339 colander/__init__.py:1356
 #: colander/__init__.py:1366
 msgid "relative name \"${val}\" irresolveable without package"
-msgstr ""
-"impossibile risolvere il nome relativo \"${val}\" in assenza di un package"
+msgstr "impossibile risolvere il nome relativo \"${val}\" in assenza di un package"
 
 #: colander/__init__.py:1396
 msgid "\"${val}\" has no __name__"
@@ -140,11 +139,3 @@ msgstr "\"${val}\" non è un oggetto «time»"
 #: colander/__init__.py:1878 colander/__init__.py:1880
 msgid "Required"
 msgstr "Richiesto"
-
-#: colander/tests/test_colander.py:259 colander/tests/test_colander.py:266
-msgid "fail ${val}"
-msgstr "condizione di errore ${val}"
-
-#: colander/tests/test_colander.py:433
-msgid "${val}: ${choices}"
-msgstr "${val}: ${choices}"
