--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,7 @@ Unreleased
 Bug Fixes
 ~~~~~~~~~
 
+- Time of "00:00" no longer gives ``colander.Invalid``.
 - Un-break wrapping of callable instances as ``colander.deferred``.
   See https://github.com/Pylons/colander/issues/141.
 - Set the max length TLD to 22 in ``Email`` validator based on the
@@ -12,6 +13,7 @@ Bug Fixes
 - Fix an issue where ``drop`` was not recognized as a default and was
   returning the ``drop`` instance instead of omitting the value.
   https://github.com/Pylons/colander/issues/139
+
 
 1.0b1 (2013-09-01)
 ------------------
