--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@ Bug Fixes
 
 - Un-break wrapping of callable instances as ``colander.deferred``.
   See https://github.com/Pylons/colander/issues/141.
+- Time of "00:00" no longer gives ``colander.Invalid``.
 
 Features
 ~~~~~~~~
