--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,9 @@ Bug Fixes
 - Set the max length TLD to 22 in ``Email`` validator based on the
   current list of valid TLDs.
   See https://github.com/Pylons/colander/issues/159
+- Fix an issue where ``drop`` was not recognized as a default and was
+  returning the ``drop`` instance instead of omitting the value.
+  https://github.com/Pylons/colander/issues/139
 
 1.0b1 (2013-09-01)
 ------------------
