--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,11 @@ Bug Fixes
 - Fix an issue where ``drop`` was not recognized as a default and was
   returning the ``drop`` instance instead of omitting the value.
   https://github.com/Pylons/colander/issues/139
+- We implicitly assign the schema type to MappingSchema, SequenceSchema, and
+  TupleSchema with types of Mapping, Sequence, and Tuple explicitly.  This is
+  a minor backwards incompatibility, because we no longer allow any of those
+  schema variants to accept the implied type as a first argument.  
+  i.e. MappingSchema(Mapping()) will no longer work.
 
 Features
 ~~~~~~~~
