--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,15 @@ Features
 - Allow localization of error messages returned by ``colander.Invalid.asdict``
   by adding an optional ``translate`` callable argument.
 
+Backwards Incompatibilities
+~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+- ``SchemaNode.deserialize`` will now raise an
+  ``UnboundDeferredError`` if the node has an unbound deferred
+  validator.  Previously, deferred validators were silently ignored.
+  See https://github.com/Pylons/colander/issues/47
+
+
 1.0b1 (2013-09-01)
 ------------------
 
