--- a/colander/locale/de/LC_MESSAGES/colander.po
+++ b/colander/locale/de/LC_MESSAGES/colander.po
@@ -31,11 +31,11 @@ msgstr "Ungültige E-Mail-Adresse"
 
 #: colander/__init__.py:315
 msgid "${val} is less than minimum value ${min}"
-msgstr "${val} ist kleiner als der erlaubter Mindestwert (${min})"
+msgstr "${val} ist kleiner als der erlaubte Mindestwert (${min})"
 
 #: colander/__init__.py:316
 msgid "${val} is greater than maximum value ${max}"
-msgstr "${val} ist größer als der erlaubter Höchstwert (${max})"
+msgstr "${val} ist größer als der erlaubte Höchstwert (${max})"
 
 #: colander/__init__.py:348
 msgid "Shorter than minimum length ${min}"
@@ -51,11 +51,11 @@ msgstr "\"${val}\" ist nicht in der Auswahl ${choices}"
 
 #: colander/__init__.py:377
 msgid "One or more of the choices you made was not acceptable"
-msgstr ""
+msgstr "Mindestens eine Auswahl war nicht akzeptabel"
 
 #: colander/__init__.py:423
 msgid "Must be a URL"
-msgstr ""
+msgstr "Muss eine URL sein"
 
 #: colander/__init__.py:519
 msgid "\"${val}\" is not a mapping type: ${err}"
@@ -99,7 +99,7 @@ msgstr "${val} ist keine Zeichenkette"
 
 #: colander/__init__.py:1279
 msgid "\"${val}\" is neither in (${false_choices}) nor in (${true_choices})"
-msgstr ""
+msgstr "\"${val}\" ist weder in (${false_choices}) noch in (${true_choices}) enthalten"
 
 #: colander/__init__.py:1339 colander/__init__.py:1356
 #: colander/__init__.py:1366
