--- a/colander/locale/fr/LC_MESSAGES/colander.po
+++ b/colander/locale/fr/LC_MESSAGES/colander.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: colander 0.8\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2013-05-19 13:15+0200\n"
-"PO-Revision-Date: 2011-10-02 21:38+0100\n"
-"Last-Translator: Bard Stéphane <stephane.bard@gmail.com>\n"
+"PO-Revision-Date: 2014-06-27 11:46+0100\n"
+"Last-Translator: Cédric Messiant <cedric.messiant@gmail.com>\n"
 "Language-Team: fr <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: colander/__init__.py:233
 msgid "Invalid value"
@@ -23,11 +24,11 @@ msgstr "Valeur incorrecte"
 
 #: colander/__init__.py:270
 msgid "String does not match expected pattern"
-msgstr "La chaîne de caractères n'a pas vérifié le modèle attendu"
+msgstr "La chaîne de caractères ne correspond pas au modèle attendu"
 
 #: colander/__init__.py:287
 msgid "Invalid email address"
-msgstr "Invalide adresse email"
+msgstr "Adresse email invalide"
 
 #: colander/__init__.py:315
 msgid "${val} is less than minimum value ${min}"
@@ -39,7 +40,7 @@ msgstr "${val} est plus grand que la valeur maximum autorisée (${max})"
 
 #: colander/__init__.py:348
 msgid "Shorter than minimum length ${min}"
-msgstr "La longueur est inférieur à la taille minimum autorisée (${min})"
+msgstr "La longueur est inférieure à la taille minimum autorisée (${min})"
 
 #: colander/__init__.py:354
 msgid "Longer than maximum length ${max}"
@@ -73,11 +74,10 @@ msgstr "\"${val}\" n'est pas itérable"
 
 #: colander/__init__.py:664
 msgid ""
-"\"${val}\" has an incorrect number of elements (expected ${exp}, was "
-"${was})"
+"\"${val}\" has an incorrect number of elements (expected ${exp}, was ${was})"
 msgstr ""
-"\"${val}\" possède un nombre incorrecte d'éléments (attendu ${exp}, "
-"trouvé ${was})"
+"\"${val}\" possède un nombre incorrect d'éléments (attendu ${exp}, trouvé "
+"${was})"
 
 #: colander/__init__.py:803
 msgid "${cstruct} is not iterable"
@@ -97,11 +97,12 @@ msgstr "\"${val}\" n'est pas un nombre"
 
 #: colander/__init__.py:1268
 msgid "${val} is not a string"
-msgstr "${val} n'est pas une chaîne de carctères"
+msgstr "${val} n'est pas une chaîne de caractères"
 
 #: colander/__init__.py:1279
 msgid "\"${val}\" is neither in (${false_choices}) nor in (${true_choices})"
-msgstr "\"${val}\" ne fait partie ni de (${false_choices}) ni de (${true_choices})"
+msgstr ""
+"\"${val}\" ne fait partie ni de (${false_choices}) ni de (${true_choices})"
 
 #: colander/__init__.py:1339 colander/__init__.py:1356
 #: colander/__init__.py:1366
@@ -133,16 +134,14 @@ msgid "\"${val}\" is not a date object"
 msgstr "\"${val}\" n'est pas un objet date"
 
 #: colander/__init__.py:1610
-#, fuzzy
 #| msgid "Invalid date"
 msgid "Invalid time"
-msgstr "Date invalide"
+msgstr "Heure invalide"
 
 #: colander/__init__.py:1621
-#, fuzzy
 #| msgid "\"${val}\" is not a datetime object"
 msgid "\"${val}\" is not a time object"
-msgstr "\"${val}\" n'est pas un objet datetime"
+msgstr "\"${val}\" n'est pas un objet time"
 
 #: colander/__init__.py:1878 colander/__init__.py:1880
 msgid "Required"
