--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,7 +13,10 @@ Bug Fixes
 - Fix an issue where ``drop`` was not recognized as a default and was
   returning the ``drop`` instance instead of omitting the value.
   https://github.com/Pylons/colander/issues/139
-
+- Fix an issue where the ``SchemaNode.title`` was clobbered by the ``name``
+  when defined as a class attribute.
+  See https://github.com/Pylons/colander/pull/183 and
+  https://github.com/Pylons/colander/pull/185
 
 1.0b1 (2013-09-01)
 ------------------
