--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,11 @@ Unreleased
 Bug Fixes
 ~~~~~~~~~
 
+- Removed forked iso8601 and change to dependency on pypi iso8601
+  (due to float rounding bug on microsecond portion when parsing
+  iso8601 datetime string).  Left an iso8601.py stub for backwards
+  compatibility.
+
 - Time of "00:00" no longer gives ``colander.Invalid``.
 - Un-break wrapping of callable instances as ``colander.deferred``.
   See https://github.com/Pylons/colander/issues/141.
