--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,6 +27,9 @@ Bug Fixes
   See https://github.com/Pylons/colander/pull/183 and
   https://github.com/Pylons/colander/pull/185
 
+- Fix an issue where the ``flatten()'' method produces an invalid name (ex: "answer.0.") for the type "Sequence"
+  https://github.com/Pylons/colander/issues/179
+
 Features
 ~~~~~~~~
 
