--- a/colander/locale/de/LC_MESSAGES/colander.po
+++ b/colander/locale/de/LC_MESSAGES/colander.po
@@ -8,14 +8,16 @@ msgstr ""
 "Project-Id-Version: colander 0.5.2\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2013-05-19 13:15+0200\n"
-"PO-Revision-Date: 2010-10-01 09:52+0100\n"
-"Last-Translator: Charlie Clark <charlie@begeistert.org>\n"
+"PO-Revision-Date: 2016-09-18 22:51+0200\n"
+"Last-Translator: Andreas Kaiser <kaiser@xo7.de>\n"
 "Language-Team: repoze developers <repoze-dev@lists.repoze.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
+"Language: de\n"
+"X-Generator: Poedit 1.8.9\n"
 
 #: colander/__init__.py:233
 msgid "Invalid value"
@@ -70,20 +72,16 @@ msgid "\"${val}\" is not iterable"
 msgstr "\"${val}\" ist nicht iterierbar"
 
 #: colander/__init__.py:664
-msgid ""
-"\"${val}\" has an incorrect number of elements (expected ${exp}, was "
-"${was})"
-msgstr "Ungültige Anzahl von Elementen (${exp} erwartet, ${was} gegeben)"
+msgid "\"${val}\" has an incorrect number of elements (expected ${exp}, was ${was})"
+msgstr "Ungültige Anzahl von Elementen (${was}, erwartet: ${exp})"
 
 #: colander/__init__.py:803
 msgid "${cstruct} is not iterable"
 msgstr "${cstruct} ist nicht iterierbar"
 
 #: colander/__init__.py:1075
-#, fuzzy
-#| msgid "\"${val} cannot be serialized to str: ${err}"
 msgid "${val} cannot be serialized: ${err}"
-msgstr "${val} kann nicht in eine Zeichenkette umgewandelt werden: ${err}"
+msgstr "${val} kann nicht serialisiert werden: ${err}"
 
 #: colander/__init__.py:1093
 msgid "${val} is not a string: ${err}"
@@ -101,8 +99,7 @@ msgstr "${val} ist keine Zeichenkette"
 msgid "\"${val}\" is neither in (${false_choices}) nor in (${true_choices})"
 msgstr "\"${val}\" ist weder in (${false_choices}) noch in (${true_choices}) enthalten"
 
-#: colander/__init__.py:1339 colander/__init__.py:1356
-#: colander/__init__.py:1366
+#: colander/__init__.py:1339 colander/__init__.py:1356 colander/__init__.py:1366
 msgid "relative name \"${val}\" irresolveable without package"
 msgstr "relativer Name \"${val}\" ist ohne Paket nicht auflösbar"
 
@@ -119,10 +116,8 @@ msgid "The dotted name \"${name}\" cannot be imported"
 msgstr "Der Dotted-Name \"${name}\" kann nicht importiert werden"
 
 #: colander/__init__.py:1462 colander/__init__.py:1538
-#, fuzzy
-#| msgid "Invalid value"
 msgid "Invalid date"
-msgstr "Ungültiger Wert"
+msgstr "Ungültiges Datum"
 
 #: colander/__init__.py:1478
 msgid "\"${val}\" is not a datetime object"
@@ -133,16 +128,12 @@ msgid "\"${val}\" is not a date object"
 msgstr "\"${val}\" ist kein Date-Object"
 
 #: colander/__init__.py:1610
-#, fuzzy
-#| msgid "Invalid value"
 msgid "Invalid time"
-msgstr "Ungültiger Wert"
+msgstr "Ungültige Uhrzeit"
 
 #: colander/__init__.py:1621
-#, fuzzy
-#| msgid "\"${val}\" is not a datetime object"
 msgid "\"${val}\" is not a time object"
-msgstr "\"${val}\" ist kein Datetime-Object"
+msgstr "\"${val}\" ist kein Time-Objekt"
 
 #: colander/__init__.py:1878 colander/__init__.py:1880
 msgid "Required"
@@ -153,4 +144,3 @@ msgstr "Pflichtangabe"
 
 #~ msgid "${val} cannot be parsed as an iso8601 date: ${err}"
 #~ msgstr "${val} ist keine gültige Zeitangabe nach ISO8601: ${err}"
-
