Apply changes as per discussion on deform bug

--- a/colander/locale/zh_Hant/LC_MESSAGES/colander.po
+++ b/colander/locale/zh_Hant/LC_MESSAGES/colander.po
@@ -1,4 +1,6 @@
-# Chinese (Traditional Chinese) translations for colander.
+# Chinese (Traditional) translations for deform.
+# While this is meant to be a traditional chinese translation, since it was done
+# By someone from Taiwan, it might have regional specialites.
 # This file is distributed under the same license as the colander project.
 #
 msgid ""
